<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="mult">*</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="divide">/</string>
    <string name="percentage">%</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="clear">C</string>
    <string name="backspace">backspace</string>
    <string name="cannot_divide_by_0">Cannot divide by 0</string>
    <string name="calculator">Calculator error</string>
</resources>